src/App.css
.infobar {
  background-color: #6a7e5a;
}

.Task {
  border-radius: 5px;
  max-width: 400px;
  display: flex;
  flex-direction: column;
  border: 1px solid white;
  padding: 15px;
  margin: 20px;
  box-shadow: 3px 3px 5px rgb(33, 33, 33);
  background-color: #9cb48c;
}

.Task ul {
  display: flex;
  flex-flow: row wrap;
  width: 92,5%;
}

.Task li {
  min-width:45%;
  list-style-type: none;
  text-align: left;
  padding: 7.5px 5px;
}

.Task button {
  border-radius: 200px;
  border: 1px solid white;
  background-color: transparent;
  color: white;
  padding: 15px;
  width: 120px;
  height: 100%;
  box-shadow: 3px 3px 5px rgb(33, 33, 33);
}

.App {
  text-align: center;
}

.App-header {
  background-color: #4f6147;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

img {
  border: 1px solid white;
  box-shadow: 3px 3px 5px rgb(33, 33, 33);
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

